@@ -45,8 +45,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.azuread.ApplicationCertificateArgs;
  * import com.pulumi.std.StdFunctions;
  * import com.pulumi.std.inputs.FileArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -92,8 +92,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.std.StdFunctions;
  * import com.pulumi.std.inputs.FileArgs;
  * import com.pulumi.std.inputs.Base64encodeArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -141,8 +141,8 @@ import javax.annotation.Nullable;
  * import com.pulumi.azurerm.KeyVaultCertificateArgs;
  * import com.pulumi.azuread.ApplicationCertificate;
  * import com.pulumi.azuread.ApplicationCertificateArgs;
- * import java.util.List;
  * import java.util.ArrayList;
+ * import java.util.Arrays;
  * import java.util.Map;
  * import java.io.File;
  * import java.nio.file.Files;
@@ -161,31 +161,31 @@ import javax.annotation.Nullable;
  *         var example = new KeyVaultCertificate("example", KeyVaultCertificateArgs.builder()
  *             .name("generated-cert")
  *             .keyVaultId(exampleAzurermKeyVault.id())
- *             .certificatePolicy(List.of(Map.ofEntries(
- *                 Map.entry("issuerParameters", List.of(Map.of("name", "Self"))),
- *                 Map.entry("keyProperties", List.of(Map.ofEntries(
+ *             .certificatePolicy(Arrays.asList(Map.ofEntries(
+ *                 Map.entry("issuerParameters", Arrays.asList(Map.of("name", "Self"))),
+ *                 Map.entry("keyProperties", Arrays.asList(Map.ofEntries(
  *                     Map.entry("exportable", true),
- *                     Map.entry("keySize", %!v(PANIC=Format method: fatal: A failure has occurred: unexpected literal type in GenLiteralValueExpression: cty.NumberIntVal(2048) (example.pp:9,20-24))),
+ *                     Map.entry("keySize", 2048),
  *                     Map.entry("keyType", "RSA"),
  *                     Map.entry("reuseKey", true)
  *                 ))),
- *                 Map.entry("lifetimeAction", List.of(Map.ofEntries(
- *                     Map.entry("action", List.of(Map.of("actionType", "AutoRenew"))),
- *                     Map.entry("trigger", List.of(Map.of("daysBeforeExpiry", %!v(PANIC=Format method: fatal: A failure has occurred: unexpected literal type in GenLiteralValueExpression: cty.NumberIntVal(30) (example.pp:18,28-30)))))
+ *                 Map.entry("lifetimeAction", Arrays.asList(Map.ofEntries(
+ *                     Map.entry("action", Arrays.asList(Map.of("actionType", "AutoRenew"))),
+ *                     Map.entry("trigger", Arrays.asList(Map.of("daysBeforeExpiry", 30)))
  *                 ))),
- *                 Map.entry("secretProperties", List.of(Map.of("contentType", "application/x-pkcs12"))),
- *                 Map.entry("x509CertificateProperties", List.of(Map.ofEntries(
- *                     Map.entry("extendedKeyUsage", List.of("1.3.6.1.5.5.7.3.2")),
- *                     Map.entry("keyUsage", List.of(                    
+ *                 Map.entry("secretProperties", Arrays.asList(Map.of("contentType", "application/x-pkcs12"))),
+ *                 Map.entry("x509CertificateProperties", Arrays.asList(Map.ofEntries(
+ *                     Map.entry("extendedKeyUsage", Arrays.asList("1.3.6.1.5.5.7.3.2")),
+ *                     Map.entry("keyUsage", Arrays.asList(                    
  *                         "dataEncipherment",
  *                         "digitalSignature",
  *                         "keyCertSign",
  *                         "keyEncipherment")),
- *                     Map.entry("subjectAlternativeNames", List.of(Map.of("dnsNames", List.of(                    
+ *                     Map.entry("subjectAlternativeNames", Arrays.asList(Map.of("dnsNames", Arrays.asList(                    
  *                         "internal.contoso.com",
  *                         "domain.hello.world")))),
  *                     Map.entry("subject", String.format("CN=%s", exampleApplication.name())),
- *                     Map.entry("validityInMonths", %!v(PANIC=Format method: fatal: A failure has occurred: unexpected literal type in GenLiteralValueExpression: cty.NumberIntVal(12) (example.pp:31,26-28)))
+ *                     Map.entry("validityInMonths", 12)
  *                 )))
  *             )))
  *             .build());
